crates/biome_js_analyze/tests/specs/nursery/noPlaywrightForceOption/invalid/fill.js
await page.locator('input').fill('text', { force: true });


